Fix styling when site broken on small device

--- a/assets/sass/partials/_affiliate.scss
+++ b/assets/sass/partials/_affiliate.scss
@@ -232,3 +232,7 @@
   text-align: center;
 }
 
+.amazon-wish-list {
+  background: lighten($main_color, 20%);
+  padding: 0.5em 1em;
+}
