--- a/assets/sass/partials/_content.scss
+++ b/assets/sass/partials/_content.scss
@@ -13,29 +13,34 @@
     margin: 0 1em 1em;
   }
 
-  .section-related__item {
-    display: flex;
-    flex-flow: row nowrap;
-    margin: 1.8em 0;
-
-    .section-related__item-has-product {
+  .section-related__item-list {
+    .section-related__item {
       display: flex;
-      flex-flow: column nowrap;
-      flex: 1 0 auto;
-
-      .section-related__item-product-name {
-        font-size: 1.2em;
+      flex-flow: row nowrap;
+      margin: 1.8em 0;
+  
+      .section-related__item-has-product {
+        display: flex;
+        flex-flow: column nowrap;
+        flex: 0 1 auto;
+  
+        .section-related__item-product-name {
+          font-size: 1.2em;
+        }
+  
+        .section-related__item-title {
+          font-size: 0.75em;
+          margin: 0.2em 1em;
+        }
+  
       }
-
-      .section-related__item-title {
-        font-size: 0.75em;
-        margin: 0.2em 1em;
-      }
-
       .section-related__item-rate {
         align-items: flex-end;
+        flex: 1 0 auto;
+        align-self: center;
       }
-    }
+  }
+  
   }
 }
 
