--- a/assets/sass/partials/_product_info.scss
+++ b/assets/sass/partials/_product_info.scss
@@ -32,6 +32,7 @@
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    width: 100%;
   }
 
   .product_evaluation {
